# ZENTORA

./: .editorconfig  .gitignore  CONTRIBUTING.md  Makefile  README.md  docker-compose.yml
apps/backend/: .flake8  .gitignore  alembic.ini  pyproject.toml  requirements.txt
apps/backend/alembic/: env.py
apps/backend/app/: __init__.py  main.py
apps/backend/app/api/v1/: __init__.py  api.py
apps/backend/app/api/v1/endpoints/: auth.py  users.py
apps/backend/app/core/: config.py  email.py  email_verification.py  enums.py  redis.py  scheduler.py  security.py  social_auth.py  temp_auth.py
apps/backend/app/core/auth/: password_recovery.py  security.py  social_auth.py
apps/backend/app/core/config/: config.py
apps/backend/app/core/email/: email.py
apps/backend/app/core/utils/: deps.py  enums.py  scheduler.py
apps/backend/app/db/: base.py  base_class.py  deps.py  init_db.py
apps/backend/app/db/models/: __init__.py  user.py
apps/backend/app/email-templates/: email_verification.html  password_reset.html
apps/backend/app/schemas/: __init__.py  user.py
apps/frontend/: .eslintrc.json  .prettierignore  eslint.config.mjs  next.config.ts  package.json  tsconfig.json
apps/frontend/src/: global.d.ts  middleware.ts
apps/frontend/src/app/: globals.css  layout.tsx  loading.tsx  page.tsx
apps/frontend/src/lib/: axios.ts
infra/docker/backend/: Dockerfile
infra/docker/frontend/: Dockerfile
infra/docker/nginx/: Dockerfile  nginx.conf
scripts/: README.md  check_connectivity.sh  check_container_network.sh  diagnose_network.sh  fix_wsl_dns.sh  format.sh  init_db.sh  lint.sh  setup.sh  test.sh
(+108 files in other folders)
